--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -2,6 +2,7 @@
 @import 'core/functions';
 @import 'core/reset';
 @import 'layout/main';
+@import 'components/header';
 @import 'components/phonecatalog';
 @import 'components/phone';
 @import 'components/phonedetail';
