change header styles

--- a/src/stylesheets/components/_phonecatalog.scss
+++ b/src/stylesheets/components/_phonecatalog.scss
@@ -4,6 +4,8 @@
   grid-gap: rem(8);
   justify-content: center;
   justify-items: center;
+  position: relative;
+  top: 100px;
   padding: rem(15);
   max-width: rem(1100);
   margin: 0 auto;
