--- a/src/stylesheets/components/_header.scss
+++ b/src/stylesheets/components/_header.scss
@@ -2,4 +2,11 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  position: fixed;
+  width: 100%;
+  height: 80px;
+  font-family: $font-main;
+  background-color: rgb(4, 3, 27);
+  color: white;
+  z-index: 100;
 }
