add first version filter styles

--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -3,6 +3,7 @@
 @import 'core/reset';
 @import 'layout/main';
 @import 'components/header';
+@import 'components/filter';
 @import 'components/phonecatalog';
 @import 'components/phone';
 @import 'components/phonedetail';
