--- a/src/stylesheets/components/_filter.scss
+++ b/src/stylesheets/components/_filter.scss
@@ -1,12 +1,12 @@
-.radius__filter {
+.select__filter {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   margin-top: 30px;
   margin-left: 20px;
+}
 
-  label {
-    padding-right: 10px;
-  }
+.select__input {
+  margin-left: 10px;
 }
