--- a/src/stylesheets/components/_phonedetail.scss
+++ b/src/stylesheets/components/_phonedetail.scss
@@ -4,6 +4,8 @@
   justify-content: center;
   align-content: center;
   padding: rem(30);
+  position: relative;
+  top: 90px;
 
   .btn__return {
     background-color: rgb(0, 0, 0);
