add npm to give styles to ClipLoader

--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -2,7 +2,7 @@
 @import 'core/functions';
 @import 'core/reset';
 @import 'layout/main';
-@import 'components/header';
+@import 'layout/header';
 @import 'components/filter';
 @import 'components/phonecatalog';
 @import 'components/phone';
