--- a/src/stylesheets/layout/_header.scss
+++ b/src/stylesheets/layout/_header.scss
@@ -1,12 +1,34 @@
 .header {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   position: fixed;
   width: 100%;
-  height: 80px;
+  max-height: 80px;
   font-family: $font-main;
   background-color: rgb(4, 3, 27);
   color: white;
   z-index: 100;
+  &__title {
+    font-size: rem(12);
+    text-align: center;
+  }
+  &__filter {
+    font-size: rem(12);
+    text-align: center;
+  }
+  @include tablet {
+    flex-direction: row;
+    justify-content: space-around;
+    &__title {
+      font-size: rem(16);
+    }
+  }
+
+  @include desktop {
+    justify-content: space-around;
+    &__title {
+      font-size: rem(18);
+    }
+  }
 }
