last changes in styles

--- a/client/src/stylesheets/components/_phone.scss
+++ b/client/src/stylesheets/components/_phone.scss
@@ -1,3 +1,9 @@
+.phone__image {
+  max-width: rem(100);
+  max-height: rem(100);
+  align-items: center;
+}
+
 .phone__information {
   display: flex;
   flex-direction: row;
@@ -10,9 +16,12 @@
       color: black;
       font-size: rem(11);
       margin-bottom: rem(5);
+      text-align: center;
     }
     .phone__price {
       color: black;
+      font-size: rem(11);
+      text-align: center;
     }
   }
 }
