--- a/client/src/stylesheets/components/_phonecatalog.scss
+++ b/client/src/stylesheets/components/_phonecatalog.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   justify-items: center;
   position: relative;
-  top: 100px;
+  top: rem(100);
   padding: rem(15);
   max-width: rem(1100);
   margin: 0 auto;
